--- a/src/assets/scss/_background.scss
+++ b/src/assets/scss/_background.scss
@@ -1,7 +1,7 @@
 @each $color, $value in $theme-colors {
   .bg-gradient-#{$color} {
     background-color: $value;
-    background-image: linear-gradient(180deg, $value 10%, darken($value, 15%) 100%);
+    background-image: linear-gradient(180deg, $value 10%, darken($value, 15%) cover);
     background-size: cover;
   }
 }
@@ -9,6 +9,13 @@
 .bg-signin {
   background: url("~@/assets/img/bg-signin.jpg");
   background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.bg-signup {
+  background: url("~@/assets/img/bg-signup.jpg");
+  background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
 }
