Add pages for reset password

--- a/src/assets/scss/_background.scss
+++ b/src/assets/scss/_background.scss
@@ -6,6 +6,13 @@
   }
 }
 
+.bg-forgot-password {
+  background: url("~@/assets/img/bg-forgot-password.jpg");
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .bg-signin {
   background: url("~@/assets/img/bg-signin.jpg");
   background-position: center;
