--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -2,5 +2,9 @@
 
 @import 'node_modules/bootstrap/scss/bootstrap';
 
+@import "app";
 @import "background";
 @import "body";
+@import "dropdown";
+@import "nav";
+@import "sidebar";
