Decrease sidebar width

--- a/src/assets/scss/_sidebar.scss
+++ b/src/assets/scss/_sidebar.scss
@@ -5,7 +5,7 @@
     padding: 1.325rem 2rem;
 
     .logo {
-      fill: $white;
+      fill: $sidebar-color;
       height: 1.75rem;
       width: 1.75rem;
     }
@@ -20,7 +20,7 @@
     padding: .75rem;
 
     .sidebar-link {
-      color: rgba($white, .8);
+      color: $sidebar-color;
       display: block;
       font-size: 11pt;
       margin-bottom: 2rem;
