--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -29,7 +29,8 @@ $box-shadow: 0 .15rem 1.75rem 0 rgba($gray-900, .15);
 
 $font-family-sans-serif: 'Source Sans Pro', sans-serif, Arial;
 
-$sidebar-width: 10rem;
+$sidebar-color: rgba($white, .8);
+$sidebar-width: 8rem;
 
 $navbar-light-brand-color: $gray-800;
 $navbar-light-brand-hover-color: $gray-800;
