--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -22,6 +22,8 @@
 
     .app-content {
       background: $gray-100;
+      display: flex;
+      flex-flow: column;
       flex: 1;
       min-height: 100%;
       overflow-x: hidden;
