Add vertical divider component to navbar

--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -1,3 +1,10 @@
+.nav-divider {
+  background: $gray-400;
+  height: 1.5rem;
+  margin: auto 1rem;
+  width: .0625rem;
+}
+
 .navbar-toggler {
   background: none;
   border: none;
