--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -25,7 +25,7 @@ $display4-size: 1.5rem;
 $body-color: $gray-700;
 $border-color: darken($gray-200, 2%);
 
-$box-shadow: 0 .15rem 1.75rem 0 rgba($gray-900, .15);
+$box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
 
 $font-family-sans-serif: 'Source Sans Pro', sans-serif, Arial;
 
