Decrease the grayscale of the secondary color

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -11,6 +11,7 @@ $gray-900: #3a3b45 !default;
 $dark: #343a40;
 
 $primary: #5960a3;
+$secondary: $gray-600;
 $success: #2bbbad;
 $warning: #ffbb33;
 $danger: #ff3547;
