Add campaign search page

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -36,9 +36,12 @@ $sidebar-width: 8rem;
 $navbar-light-brand-color: $gray-800;
 $navbar-light-brand-hover-color: $gray-800;
 
-$card-cap-bg: $gray-100;
 $card-border-color: $border-color;
+$card-cap-bg: $white;
 
 $dropdown-border-color: $border-color;
 $dropdown-color: $body-color;
 $dropdown-font-size: 11pt;
+
+$table-cell-padding: 1.25rem;
+$table-cell-padding-sm: .5rem;
