Add campaign list page

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,7 +14,7 @@ $primary: #5960a3;
 $secondary: $gray-600;
 $success: #2bbbad;
 $warning: #ffbb33;
-$danger: #ff3547;
+$danger: #e74c3c;
 $pink: #ec407a;
 $ocean: #4096dd;
 
