--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -26,7 +26,7 @@ $display4-size: 1.5rem;
 $body-color: $gray-700;
 $border-color: darken($gray-200, 2%);
 
-$box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
+$box-shadow: 0 0 1.25rem rgba(0, 0, 0, .1);
 
 $font-family-sans-serif: 'Source Sans Pro', sans-serif, Arial;
 
